# task-manager

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter-check.yml  test-check.yml
config/: gunicorn.conf.py  task_manager.conf
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: label_create.html  label_delete.html  label_list.html
task_manager/labels/tests/: test_models.py  test_views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: status_create.html  status_delete.html  status_list.html  statuses_list.html
task_manager/statuses/tests/: test_models.py  test_views.py
task_manager/tasks/: admin.py  filters.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabel_task_labels.py
task_manager/tasks/templates/tasks/: task_delete.html  task_detail.html  task_list.html  tasks_list.html
task_manager/tasks/tests/: test_models.py  test_views.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/components/: footer.html  navbar.html
task_manager/tests/: test_users.py  test_views.py
task_manager/tests/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/users/: admin.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/users/: user_create.html  user_delete.html  user_list.html  users_list.html
task_manager/users/tests/: test_models.py  test_views.py
