[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ratushnyyvm <ratushnyyvm@gmail.com>"]
readme = "README.md"
packages = [
    {include = "task_manager"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "4.1.7"
python-dotenv = "^0.21.1"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
django-bootstrap4 = "^22.3"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
django-filter = "^22.1"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
