[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "web app for task management"
authors = ["ratushnyyvm <ratushnyyvm@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ratushnyyvm/task-manager"
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django :: 4.1",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]
packages = [
    {include = "task_manager"}
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
django = "4.1.7"
python-dotenv = "^0.21.1"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
django-bootstrap4 = "^22.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.5"
django-filter = "^22.1"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
